# k8s-landingpage

./: Cargo.toml  Dockerfile  README.md  config.yaml  template.html
.github/workflows/: release.yaml
helm/landingpage/: Chart.yaml  values.yaml
helm/landingpage/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
src/: api.rs  collector.rs  config.rs  errors.rs  main.rs
