[package]
name = "landingpage"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
kube = {version = "2.0.1", features = ["client", "rustls-tls"]}
k8s-openapi = { version = "0.26.0", default-features = false, features = ["v1_31"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["fs", "set-header", "cors"] }
tower-sessions = "0.14.0"
tower = "0.5.2"
thiserror = "2.0.17"
minijinja = "2.12.0"
axum-oidc = "0.6.0"
